// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number control Disable 1`] = `
<div
  class="control disabled"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content"
    >
      <input
        class="number"
        disabled="true"
        max="10"
        step="0.1"
        type="number"
      />
      
  
    </div>
  </main>
</div>
`;

exports[`Number control Enable 1`] = `
<div
  class="control"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content"
    >
      <input
        class="number"
        max="10"
        step="0.1"
        type="number"
      />
      
  
    </div>
  </main>
</div>
`;

exports[`Number control If it matches snapshot after initial load 1`] = `
<div
  class="control"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="name"
    >
      name
    </p>
    <div
      class="control__content"
    >
      <input
        class="number"
        max="10"
        step="0.1"
        type="number"
      />
      
  
    </div>
  </main>
</div>
`;
